Fix layout bug

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -28,6 +28,8 @@ body {
 html,
 body,
 #__next {
+  display: flex;
+  width: 100%;
   height: 100%;
   font-size: 16px;
 }
